--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -1,1 +1,13 @@
-{"dependencies": {}, "locked": {}}
+{
+  "dependencies": {
+    "com.fax.vrcatpng": {
+      "version": "0.0.1"
+    }
+  },
+  "locked": {
+    "com.fax.vrcatpng": {
+      "version": "0.0.1",
+      "dependencies": {}
+    }
+  }
+}
