--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -2,5 +2,5 @@
 !com.vrchat.core.*
 
 # Change this to match your new package name
-!com.vrchat.demo-template 
+!com.fax.vrcatpng
 !com.vrchat.core.*/
